# Issues-FS__Service__UI

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: ci-pipeline.yml
.issues/: README.md  _index.json  issue.json
.issues/config/: link-types.json  node-types.json
.issues/data/bug/: _index.json
.issues/data/bug/Bug-1/: issue.json
.issues/data/bug/Bug-10/: issue.json
.issues/data/bug/Bug-11/: issue.json
.issues/data/bug/Bug-12/: issue.json
.issues/data/bug/Bug-13/: issue.json
.issues/data/bug/Bug-2/: issue.json
.issues/data/bug/Bug-3/: issue.json
.issues/data/bug/Bug-4/: issue.json
.issues/data/bug/Bug-5/: issue.json
.issues/data/bug/Bug-6/: issue.json
.issues/data/bug/Bug-7/: issue.json
.issues/data/bug/Bug-8/: issue.json
.issues/data/bug/Bug-9/: issue.json
.issues/data/cli/: _index.json
.issues/data/cli/Cli-1/: issue.json
.issues/data/feature/: _index.json
.issues/data/feature/Feature-10/: issue.json
.issues/data/feature/Feature-11/: issue.json
.issues/data/project/: _index.json
.issues/data/release/: _index.json
.issues/data/task/: _index.json
.issues/issues/Project-1/: README.md  issue.json
issues_fs_service_ui/: __init__.py  config.py
issues_fs_service_ui/fast_api/: Issues_FS__Service_UI__Fast_API.py  lambda_handler.py
issues_fs_service_ui/utils/: Version.py
issues_fs_service_ui__console/: __init__.py
scripts/: run-locally.sh
tests/ui/: Issues_FS__Service_UI__Test_Objs.py  conftest.py  test_Issues_FS__Service_UI__Console.py
tests/unit/utils/: test_Version.py
(+88 files in other folders)
