[tool.poetry]
name        = "issues_fs_service_ui"
version     = "v0.4.1"
description = "Issues-FS Service UI - Web-based user interface"
authors     = ["Dinis Cruz <dinis.cruz@owasp.org>"]
license     = "Apache 2.0"
readme      = "README.md"
homepage    = "https://github.com/owasp-sbot/Issues-FS__Service__UI"
repository  = "https://github.com/owasp-sbot/Issues-FS__Service__UI"

[tool.poetry.dependencies]
python            = "^3.12"
osbot-utils       = "*"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"
